2011-05-18  Denis Lila  <dlila@redhat.com>

	* Makefile.am:
	(JDK_CHANGESET): Updated to backout OpenJDK6 fix
	of 6664512 and include Mutter fix.
	(JDK_SHA256SUM): Likewise.

2011-05-18  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(bootstrap-directory-stage1): Link tools.jar
	if available.  Otherwise, link to existing rt.jar.

2011-05-16  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* test/jtreg/README:
	Updated.
	* test/jtreg/com/sun/javatest/regtest/Path.java:
	Added.
	* test/jtreg/com/sun/javatest/regtest/Action.java:
	* test/jtreg/com/sun/javatest/regtest/CompileAction.java:
	* test/jtreg/com/sun/javatest/regtest/RegressionSecurityManager.java:
	Corrected JTreg harness - this tool now accepts "process" flag for
	"compile" tag.

2011-05-04  Andrew John Hughes  <ahughes@redhat.com>

	* remove-intree-libraries.sh: Renamed.
	* INSTALL: Updated with new option.
	* Makefile.am:
	(JDK_CHANGESET): Updated to get LCMS patches.
	(JDK_SHA256SUM): Likewise.
	(ICEDTEA_ENV): Set USE_SYSTEM_LCMS, LCMS_LIBS
	and LCMS_CFLAGS if building with system LCMS.
	* acinclude.m4:
	(IT_CHECK_FOR_LCMS): Provide the --enable-system-lcms
	option, enabled by default.
	* configure.ac:
	Call IT_CHECK_FOR_LCMS.
	* remove-intree-libraries.sh.in:
	Delete LCMS source code only if system version is
	being used.

2011-05-04  Andrew John Hughes  <ahughes@redhat.com>

	Move to using icedtea servers.
	* Makefile.am:
	(CORBA_SHA256SUM): Updated.
	(HOTSPOT_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	(ICEDTEA_PREFIX): Added to avoid hardcoding
	the prefix for the root directory.
	(ICEDTEA_HG_URL): Updated to use icedtea.classpath.org
	(extract-openjdk): Use $(ICEDTEA_PREFIX) in
	place of 'jdk7'.

2011-05-03  Andrew John Hughes  <ahughes@redhat.com>

	* patches/hotspot/default/gcc-suffix.patch,
	* patches/hotspot/default/headers.patch,